# api-subway

./: .api-subway.example.toml  .gitattributes  .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  osv-scanner.yml  pages.yml  publish-registries.yml  release.yml
crates/api-subway-analyzers/: Cargo.toml
crates/api-subway-analyzers/src/: boundary.rs  catalog.rs  custom_rules.rs  discovery.rs  express.rs  fastapi.rs  input.rs  javascript.rs  lib.rs  model_budget.rs  next.rs  openapi.rs  python.rs
crates/api-subway-analyzers/src/contracts/: mod.rs  openapi.rs  python.rs  zod.rs
crates/api-subway-analyzers/tests/: adversarial.rs  fixtures.rs
crates/api-subway-cli/: Cargo.toml
crates/api-subway-cli/src/: main.rs
crates/api-subway-cli/tests/: cli.rs
crates/api-subway-core/: Cargo.toml
crates/api-subway-core/src/: builder.rs  config.rs  error.rs  lib.rs  model.rs  path.rs
crates/api-subway-renderer/: Cargo.toml
crates/api-subway-renderer/examples/: generate_goldens.rs
crates/api-subway-renderer/src/: html.rs  layout.rs  lib.rs  svg.rs
crates/api-subway-renderer/tests/: golden.rs
crates/api-subway-renderer/tests/support/: mod.rs
crates/api-subway-renderer/viewer/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
crates/api-subway-renderer/viewer/src/: main.ts  schema-simulator.ts  types.ts  viewer.css
crates/api-subway-renderer/viewer/src/virtual-backend/: dictionary.ts  engine.ts  planner.ts  schema-projector.ts  store.ts  types.ts
crates/api-subway-renderer/viewer/src/workspace/: backend-window.ts  endpoint-window.ts  html.ts  response-view.ts  schema-fields.ts  types.ts  window-manager.ts
crates/api-subway-renderer/viewer/tests/: viewer.spec.ts
docs/: ACCURACY.md  api-subway.html
fixtures/corpus/: manifest.json
fixtures/corpus/express-commerce/: package.json
fixtures/corpus/express-commerce/src/: app.ts
fixtures/corpus/express-commerce/src/integrations/: notifications.ts
fixtures/corpus/express-commerce/src/middleware/: session.ts
fixtures/corpus/express-commerce/src/repositories/: orders.ts
fixtures/corpus/express-commerce/src/routes/: orders.ts
fixtures/corpus/express-commerce/src/services/: orders.ts
fixtures/corpus/fastapi-operations/: pyproject.toml
fixtures/corpus/fastapi-operations/src/operations/: __init__.py  dependencies.py  main.py
fixtures/corpus/fastapi-operations/src/operations/routes/: orders.py
fixtures/corpus/next-saas/: package.json
fixtures/corpus/next-saas/src/: proxy.ts
fixtures/corpus/next-saas/src/services/: projects.ts
fixtures/demo/: .api-subway.toml  openapi.yaml  package.json
fixtures/demo/docs/: api-subway.json
fixtures/demo/src/: app.ts
fixtures/demo/src/clients/: profile-enrichment.ts
fixtures/demo/src/integrations/: notifications.ts
fixtures/demo/src/middleware/: auth.ts
fixtures/demo/src/repositories/: events.ts  orders.ts  users.ts
fixtures/demo/src/routes/: billing.ts  events.ts  orders.ts  users.ts
fixtures/demo/src/services/: billing.ts  events.ts  orders.ts  users.ts
fixtures/dependencies/: package.json
fixtures/dependencies/src/: app.ts
fixtures/dependencies/src/integrations/: notifications.ts
fixtures/dependencies/src/repositories/: orders.ts
fixtures/dependencies/src/routes/: orders.ts
fixtures/dependencies/src/services/: orders.ts
fixtures/express/: package.json
fixtures/express/src/: app.ts
fixtures/express/src/middleware/: audit.ts  auth.ts
fixtures/express/src/routes/: users.ts
fixtures/express/src/schemas/: users.ts
fixtures/fastapi/: pyproject.toml
fixtures/fastapi/app/: dependencies.py  main.py
fixtures/fastapi/app/routers/: items.py
fixtures/fastapi/app/services/: catalog.py
fixtures/golden/: map-10.html  map-10.json  map-100.html  map-100.json  map-40.html  map-40.json
fixtures/next/: package.json
fixtures/next/src/: proxy.ts
fixtures/next/src/app/api/users/: route.ts
fixtures/next/src/schemas/: users.ts
fixtures/next/src/services/: users.ts
fixtures/openapi/: api.yaml
fixtures/virtual-backend/: store.json
schemas/: api-subway-v1.schema.json  virtual-backend-v1.schema.json
scripts/: benchmark.py  generate_sbom.py  package_release.py  publish_crates.py  publish_npm.py  release_artifacts.py  validate_schemas.py  verify_registry_publication.py  verify_release.py  write_checksums.py
scripts/tests/: test_release_tools.py
(+5 files in other folders)
