[package]
name = "api-subway-analyzers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Static framework analyzers for api-subway"

[dependencies]
api-subway-core.workspace = true
globset.workspace = true
ignore.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_parser.workspace = true
oxc_resolver.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
