[package]
name = "api-subway-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic SVG and standalone HTML renderer for api-subway"
include = ["src/**", "viewer/src/viewer.css", "viewer/dist/viewer.js", "Cargo.toml"]

[dependencies]
api-subway-core.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-width.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
